force-app/main/default/objects/Opportunity/fields/Cylinder_Volume__c.field-meta.xml
<CustomField>
    <fullName>Cylinder_Volume__c</fullName>
    <formula>CEILING( 3.14159 *(radius__c *radius__c )* height__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cylinder Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>